# ankle_exoskeleton

./: CMakeLists.txt  Force_sensor_frontal_holder.step  Force_sensor_posterior_holder.step  Frontal_part.step  README.md  package.xml
STL files/: Frontal_part.stl  Frontal_part_to_ hold_ the_ motor_holder.stl  Left_part.stl  Right_part.stl  forcesensor_posterior_holder.stl  motor_holder.stl
arduino/force_tendons/: force_tendons.ino
arduino/imu_bno055/: imu_bno055.ino
arduino/imu_data/: imu_data.ino
arduino/imus_bno055/: imus_bno055.ino
arduino/insole_acquisition/: insole_acquisition.ino
config/: basic.yaml  dxl_ports.sh  frontal.yaml  online_detection.yaml  online_detection.yaml.save  posterior.yaml
include/ankle_exoskeleton/: current_based_pwm_controller.h  dynamixel_controllers.h  gait_cycle_classifier.hpp  torque_based_vel_controller.h
launch/: dynamixel_controllers.launch  dynamixel_torque_controller.launch  imu_ankle_angle_estimation.launch  imu_data_acquisitions.launch  mid_level_controllers.launch  moticon_insole_acquisition.launch  online_gait_phase_det.launch
log/HMM_models/: daniel.txt  daniel_ff.txt  daniel_ho.txt  daniel_hs.txt  daniel_sp.txt
log/IMU_data/: daniel.csv  test1_chile.csv  test1_chile_labels.csv
log/learning_models/: .~lock.test_labels.csv#  .~lock.test_model.csv#  daniel_labels.csv  daniel_train_model.keras  test_labels.csv  test_model.keras  test_model.pkl  test_modelR.pkl  test_modelRNNs.keras
log/training_bags/: test_v1.bag
msg/: DynamixelStatus.msg  DynamixelStatusListPhysical.msg  DynamixelStatusPhysical.msg  IMUData.msg
scripts/: LSTM_gait_phase_estimator.py  R_gait_phase_estimator.py  R_quasi_final.py  admittance_controller.py  angle_setpoint_publisher.py  ankle_angle_controller.py  ankle_angle_estimator.py  ankle_dynamics_estimator.py  dynamixel_physical_info.py  gait_phase_estimator.py  ground_force_estimator.py  human_ankle_angle_emulator.py  human_torque_emulator.py  imu_data_acq.py  imu_data_acquisition.py  imus_data_acq.py  imus_data_acquisition.py  insole_acquisition.py  loadcells_acquisition.py  propulsion_high_level_controller.py  real_time_gait_phase_det.py  tendon_force_controller.py  torque_velocity_controller.py  velocity_publisher.py  ximu3_multiple_acquisition.py
src/dynamixel_workbench/: dynamixel_driver.cpp  dynamixel_item.cpp  dynamixel_tool.cpp  dynamixel_workbench.cpp
src/nodes/: current_based_pwm_controller (copy).cpp  current_based_pwm_controller.cpp  dynamixel_controllers.cpp  find_dynamixel.cpp  motor_control_mode.cpp  offline_threshold_detection_node.cpp  threshold_detection_node.cpp  torque_based_vel_controller.cpp
src/util/: feature_extractor.cpp  gait_cycle_classifier.cpp
srv/: DynamixelCmdSimplified.srv
